2015-02-17 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/bug-1953.c:
	  Disable failed tests.

2015-02-16 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCast.c:
	  Fix a bug in char array initialization with string.
	* support/regression/tests/bug-1953.c:
	  Add a new test case.
	* support/regression/tests/gcc-torture-execute-20000801-4.c:
	  Enabled.

2015-02-13 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCglue.c:
	  Make pointers (of a struct) initialization more generaic.
	* support/regression/tests/bug-2123.c:
	  Add more tests.

2015-02-11 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCglue.c:
	  Improve pointer initialization.
	* support/regression/tests/bug-2123.c:
	  Add a new test case for bug #2123.

2015-02-08 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCval.c:
	  Allow type cast in function pointer initialization.
	* support/regression/tests/bug-2124.c:
	  Add a new test case for bug #2124.

2015-02-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp:
	  Fix bug in weight calculation that affected tree-decompoisitions with imbalanced nested branches.
	* src/z80/peeph-gbz80.def:
	  Fix handling of (hl-), (hl+) in peepholes.

2015-02-05 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/mappings.i:
	  Fix gbz80 function entry helper.
	* src/SDCCralloc.hpp:
	  Use weight machanism for deciding which subtree to process first - should reduce memory consumption and improve the heuristic in the register allocator.

2015-02-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/Makefile.in: copy *.svg graphic files when using VPATH too

2015-02-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/lib/*/crtcall.s,
	  device/lib/*/crtenters,
	  device/lib/*/Makefile.in,
	  src/z80/gen.c,
	  src/z80/mappings.i,
	  src/z80/peep.c: